[Template] Correct word-wrap

--- a/app/assets/stylesheets/core.css
+++ b/app/assets/stylesheets/core.css
@@ -131,3 +131,7 @@ body{
 	bottom:40px;
 	right:40px;
 }
+
+p, h1, h2, h3, h4, h5, span{
+	word-wrap: break-word;
+}
